tests/snapshots/sfc/ts/patches__v_model_on_native_input_with_ref.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, withDirectives as _withDirectives, vModelText as _vModelText } from "vue"

import { ref } from 'vue'

export default defineComponent({
  name: 'test',
  setup(__props) {

const inputValue = ref('')

return (_ctx, _cache) => {
  return _withDirectives((_openBlock(), _createElementBlock("input", { "onUpdate:modelValue": $event => ((inputValue.value) = $event) }, null, 8 /* PROPS */, ["onUpdate:modelValue"])), [ [_vModelText, inputValue.value] ])
}
}

})
